--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@testing-library/dom": "^7.29.6",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "babel-jest": "^26.6.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-dom": "^4.0.0",
+    "next-page-tester": "^0.20.0",
+    "ts-jest": "^26.5.1",
     "typescript": "^4.1.5"
   }
 }
