--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-dom": "^4.0.0",
     "next-page-tester": "^0.20.0",
+    "react-test-renderer": "^17.0.1",
     "ts-jest": "^26.5.1",
     "typescript": "^4.1.5"
   }
